Fixing scrollbar issue on iframe

--- a/game-style.css
+++ b/game-style.css
@@ -1,6 +1,7 @@
 html {
 	display: table;
 	height: 100%;
+	overflow: hidden;
 	width: 100%;
 }
 
